[package]
name = "kabletop_godot_relayserver"
version = "0.1.0"
authors = ["vimchain"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kabletop-godot-sdk = { git = "https://github.com/ashuralyk/kabletop-godot", branch = "master" }
# kabletop-godot-sdk = { path = "../kabletop-godot/kabletop-godot-sdk" }
kabletop-ckb-sdk = { git = "https://github.com/ashuralyk/kabletop-ckb-sdk", branch = "master" }
# kabletop-ckb-sdk = { path = "../kabletop-ckb-sdk" }
lazy_static = "1.4.0"
hex = "0.4.3"
futures = "0.3.15"
serde_json = "1.0"
